--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "@types/lodash": "^4.14.165",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.11",
     "@types/uuid": "^8.3.0",
     "grommet": "^2.15.2",
+    "grommet-icons": "^4.5.0",
     "lodash": "^4.17.20",
     "polished": "^4.0.3",
     "prettier": "^2.1.2",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.0",
