--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.11",
+    "@types/react-router-dom": "^5.1.6",
     "@types/uuid": "^8.3.0",
     "grommet": "^2.15.2",
     "grommet-icons": "^4.5.0",
@@ -24,6 +25,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.2.1",
