--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux-persist": "^6.0.0",
+    "redux-undo": "^1.0.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
     "uuid": "^8.3.1",
