--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,14 +7,17 @@
   "author": "Sam Myers <sammyers.dev@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start:dev": "npm run build:dev",
-    "build:dev": "tsc-watch --onSuccess 'node build/server.js'"
+    "start:dev": "yarn run build:dev",
+    "build:dev": "tsc-watch -b --onSuccess 'node -r @dugout-companion/shared/env build/server.js'"
   },
   "dependencies": {
     "@dugout-companion/shared": "1.0.0",
-    "apollo-server-express": "^2.19.0",
+    "@graphile-contrib/pg-simplify-inflector": "^6.1.0",
     "express": "^4.17.1",
-    "graphql": "^15.4.0"
+    "graphql": "^15.4.0",
+    "pg": "^8.5.1",
+    "postgraphile": "^4.10.0",
+    "react": "^17.0.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.19.4",
@@ -25,6 +28,8 @@
     "@graphql-codegen/typescript-resolvers": "1.18.0",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.10",
+    "@types/pg": "^7.14.7",
+    "@types/react": "^17.0.0",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "tsc-watch": "^4.2.9",
