--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -9,20 +9,21 @@
   "license": "MIT",
   "scripts": {
     "codegen": "graphql-codegen --config codegen.yml",
-    "build": "tsc"
+    "build": "yarn codegen && tsc -b",
+    "watch": "yarn codegen --watch"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.2",
+    "@apollo/client": "^3.3.3",
     "apollo-server-express": "^2.19.0",
     "graphql": "^15.4.0"
   },
   "devDependencies": {
+    "@graphql-codegen/add": "^2.0.2",
     "@graphql-codegen/cli": "1.19.4",
     "@graphql-codegen/introspection": "1.18.1",
     "@graphql-codegen/typescript": "1.19.0",
     "@graphql-codegen/typescript-operations": "1.17.12",
     "@graphql-codegen/typescript-react-apollo": "2.2.1",
-    "@graphql-codegen/typescript-resolvers": "1.18.0",
     "typescript": "4.0.3"
   }
 }
