--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.3",
     "@dugout-companion/shared": "^1.0.0",
+    "@graphile/subscriptions-lds": "^4.9.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -56,6 +57,7 @@
     "redux-persist": "^6.0.0",
     "redux-undo": "^1.0.1",
     "styled-components": "^5.2.1",
+    "subscriptions-transport-ws": "^0.9.18",
     "typescript": "4.0.3",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4",
