--- a/packages/shared/codegen.yml
+++ b/packages/shared/codegen.yml
@@ -10,6 +10,10 @@ generates:
       - 'typescript-operations'
       - 'typescript-react-apollo'
     config:
+      scalars:
+        Date: string
+        Datetime: string
+        UUID: string
       avoidOptionals:
         field: true
         inputValue: false
