--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.3",
     "@dugout-companion/shared": "^1.0.0",
+    "@farbenmeer/react-spring-slider": "^1.3.3",
     "@graphile/subscriptions-lds": "^4.9.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -42,6 +43,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.7",
     "@types/uuid": "^8.3.0",
     "grommet": "^2.15.2",
     "grommet-icons": "^4.5.0",
@@ -54,6 +56,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-spring": "^8.0.27",
     "redux-persist": "^6.0.0",
     "redux-undo": "^1.0.1",
     "styled-components": "^5.2.1",
