--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "packages/*"
   ],
   "scripts": {
-    "app": "yarn workspace @dugout-companion/app",
-    "server": "yarn workspace @dugout-companion/server",
-    "shared": "yarn workspace @dugout-companion/shared",
-    "db": "yarn workspace @dugout-companion/db"
+    "app": "yarn workspace @sammyers/dc-app",
+    "db": "yarn workspace @sammyers/dc-db",
+    "server": "yarn workspace @sammyers/dc-server",
+    "shared": "yarn workspace @sammyers/dc-shared"
   }
 }
