--- a/packages/db/.gmrc
+++ b/packages/db/.gmrc
@@ -94,11 +94,11 @@
    * afterAllMigrations: actions executed once all migrations are complete.
    */
   "afterAllMigrations": [
-    // {
-    //   "_": "command",
-    //   "shadow": true,
-    //   "command": "if [ \"$IN_TESTS\" != \"1\" ]; then ./scripts/dump-db; fi",
-    // },
+    {
+      "_": "command",
+      "shadow": false,
+      "command": "echo $GM_DBURL"
+    }
   ],
 
   /*
