--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   ],
   "scripts": {
     "app": "yarn workspace @sammyers/dc-app",
+    "dashboard": "yarn workspace @sammyers/dc-dashboard",
     "db": "yarn workspace @sammyers/dc-db",
     "server": "yarn workspace @sammyers/dc-server",
     "shared": "yarn workspace @sammyers/dc-shared"
