--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sammyers/dc-app",
+  "name": "@sammyers/dc-dashboard",
   "version": "0.0.1",
   "repository": "https://github.com/sammyers/dugout-companion",
   "author": "Sam Myers <sammyers.dev@gmail.com>",
@@ -29,54 +29,33 @@
     ]
   },
   "dependencies": {
-    "@apollo/client": "^3.3.3",
+    "@apollo/client": "^3.3.11",
+    "@reduxjs/toolkit": "^1.5.0",
     "@sammyers/dc-shared": "^0.0.3",
-    "@farbenmeer/react-spring-slider": "^1.3.3",
-    "@graphile/subscriptions-lds": "^4.9.0",
-    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
-    "@types/lodash": "^4.14.165",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-beautiful-dnd": "^13.0.0",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.11",
-    "@types/react-router-dom": "^5.1.6",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
-    "@types/uuid": "^8.3.0",
-    "grommet": "^2.15.2",
+    "grommet": "^2.16.3",
     "grommet-icons": "^4.5.0",
     "lodash": "^4.17.20",
-    "polished": "^4.0.3",
-    "prettier": "^2.1.2",
+    "polished": "^4.1.1",
     "react": "^17.0.1",
-    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "4.0.2",
     "react-spring": "^8.0.27",
-    "redux-persist": "^6.0.0",
-    "redux-undo": "^1.0.1",
     "styled-components": "^5.2.1",
     "subscriptions-transport-ws": "^0.9.18",
-    "typescript": "4.0.3",
-    "uuid": "^8.3.1",
-    "web-vitals": "^0.2.4",
-    "workbox-background-sync": "^5.1.3",
-    "workbox-broadcast-update": "^5.1.3",
-    "workbox-cacheable-response": "^5.1.3",
-    "workbox-core": "^5.1.3",
-    "workbox-expiration": "^5.1.3",
-    "workbox-google-analytics": "^5.1.3",
-    "workbox-navigation-preload": "^5.1.3",
-    "workbox-precaching": "^5.1.3",
-    "workbox-range-requests": "^5.1.3",
-    "workbox-routing": "^5.1.3",
-    "workbox-strategies": "^5.1.3",
-    "workbox-streams": "^5.1.3"
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.0.1"
   }
 }
