--- a/packages/app/nginx.conf
+++ b/packages/app/nginx.conf
@@ -16,8 +16,19 @@ http {
       proxy_pass http://server:5434$request_uri;
     }
 
+    location ~* \.(?:css|js)$ {
+      try_files $uri =404;
+      expires 1y;
+      access_log off;
+      add_header Cache-Control "public";
+    }
+
+    location ~ ^.+\..+$ {
+      try_files $uri =404;
+    }
+
     location / {
-      try_files $uri $uri/ =404;
+      try_files $uri $uri/ /index.html;
     }
   }
 }
