--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -28,9 +28,9 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@apollo/client": "^3.3.3",
-    "@farbenmeer/react-spring-slider": "^1.3.3",
     "@graphile/subscriptions-lds": "^4.9.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@sammyers/dc-shared": "^0.0.3",
@@ -47,6 +47,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.7",
     "@types/uuid": "^8.3.0",
+    "framer-motion": "^4.1.17",
     "grommet": "^2.19.1",
     "grommet-icons": "^4.5.0",
     "lodash": "^4.17.20",
@@ -58,7 +59,6 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-spring": "^8.0.27",
     "redux-persist": "^6.0.0",
     "redux-undo": "^1.0.1",
     "styled-components": "^5.2.1",
