--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -47,6 +47,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.7",
     "@types/uuid": "^8.3.0",
+    "date-fns": "^2.26.0",
     "framer-motion": "^4.1.17",
     "grommet": "^2.19.1",
     "grommet-icons": "^4.5.0",
