Revamp color scheme

--- a/packages/app/public/manifest.json
+++ b/packages/app/public/manifest.json
@@ -35,6 +35,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#1c5253",
-  "background_color": "#1c5253"
+  "theme_color": "#293241",
+  "background_color": "#293241"
 }
