--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -28,6 +28,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@apollo/client": "^3.3.11",
     "@reduxjs/toolkit": "^1.5.0",
@@ -43,6 +44,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.7",
+    "date-fns": "^2.26.0",
     "grommet": "^2.16.3",
     "grommet-icons": "^4.5.0",
     "lodash": "^4.17.20",
