--- a/packages/db/Dockerfile
+++ b/packages/db/Dockerfile
@@ -1,4 +1,4 @@
-FROM postgres:13-alpine
+FROM toleg/postgres_mysql_fdw
 
 COPY ./init/ /docker-entrypoint-initdb.d/
 COPY ./scripts/prod_setup.sh /docker-entrypoint-initdb.d/000000_setup.sh
