--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -54,8 +54,11 @@
     "lodash": "^4.17.20",
     "polished": "^4.0.3",
     "prettier": "^2.1.2",
+    "rdndmb-html5-to-touch": "^7.0.0-alpha.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-dnd": "^14.0.4",
+    "react-dnd-multi-backend": "^7.0.0-alpha.4",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.0.2",
