--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Set up node
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
-          cache: 'yarn'
+          node-version: "16"
+          cache: "yarn"
       - run: yarn
       - name: Build shared package
         run: yarn shared build
@@ -23,12 +23,6 @@ jobs:
         run: yarn app build
       - name: Build stats dashboard
         run: yarn dashboard build
-      - name: Create env file
-        run: echo ${{ secrets.ENV_FILE }} | base64 --decode > prod.env
-      - name: Make init folder
-        run: mkdir ./packages/db/init
-      - name: Compile migration files
-        run: yarn db compile
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
