--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -23,6 +23,8 @@ jobs:
         run: yarn app build
       - name: Build stats dashboard
         run: yarn dashboard build
+      - name: Create env file
+        run: echo ${{ secrets.ENV_FILE }} | base64 --decode > prod.env
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
