--- a/packages/app/nginx.conf
+++ b/packages/app/nginx.conf
@@ -1,7 +1,6 @@
 events {}
 
 http {
-  client_max_body_size 50M;
   include /etc/nginx/mime.types;
 
   server {
@@ -23,6 +22,8 @@ http {
       proxy_set_header X-Forwarded-Server $host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_pass http://server:5434$request_uri;
+      client_max_body_size 50M;
+      client_body_buffer_size 50M;
     }
 
     location ~* \.(?:css|js)$ {
