--- a/packages/app/nginx.conf
+++ b/packages/app/nginx.conf
@@ -22,8 +22,7 @@ http {
       proxy_set_header X-Forwarded-Server $host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_pass http://server:5434$request_uri;
-      client_max_body_size 50M;
-      client_body_buffer_size 50M;
+      client_max_body_size 0;
     }
 
     location ~* \.(?:css|js)$ {
