--- a/packages/app/nginx.conf
+++ b/packages/app/nginx.conf
@@ -1,6 +1,7 @@
 events {}
 
 http {
+  log_format postdata $request_body;
   include /etc/nginx/mime.types;
 
   server {
@@ -23,6 +24,7 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_pass http://server:5434$request_uri;
       client_max_body_size 0;
+      access_log  /var/log/nginx/postdata.log  postdata;
     }
 
     location ~* \.(?:css|js)$ {
