--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -33,6 +33,7 @@
     "@apollo/client": "^3.3.11",
     "@reduxjs/toolkit": "^1.5.0",
     "@sammyers/dc-shared": "^0.0.3",
+    "@sammyers/dc-utils": "^0.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -50,6 +51,7 @@
     "lodash": "^4.17.20",
     "polished": "^4.1.1",
     "react": "^17.0.1",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.0.2",
