--- a/packages/db/.gmrc
+++ b/packages/db/.gmrc
@@ -63,6 +63,8 @@
    */
   "placeholders": {
     ":DATABASE_VISITOR": "!ENV", // Uses process.env.DATABASE_VISITOR
+    ":DATABASE_USER": "!ENV",
+    ":DATABASE_ADMIN": "!ENV",
     ":DATABASE_AUTHENTICATOR": "!ENV",
     ":LEGACY_DB_USER": "!ENV",
     ":LEGACY_DB_PASS": "!ENV",
