--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -14,19 +14,21 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.3",
-    "apollo-server-express": "^2.19.0",
-    "graphql": "^15.4.0",
     "@types/lodash": "^4.14.165",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.7",
+    "apollo-server-express": "^2.19.0",
+    "cookie": "^0.4.2",
     "date-fns": "^2.26.0",
     "framer-motion": "^4.1.17",
+    "graphql": "^15.4.0",
     "grommet": "^2.19.1",
     "grommet-icons": "^4.5.0",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.1",
     "styled-components": "^5.2.1"
   },
