--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -48,6 +48,7 @@
     "date-fns": "^2.26.0",
     "grommet": "^2.29.1",
     "grommet-icons": "^4.5.0",
+    "immer": "^9.0.19",
     "lodash": "^4.17.20",
     "polished": "^4.1.1",
     "react": "^17.0.1",
@@ -59,6 +60,8 @@
     "styled-components": "^5.2.1",
     "subscriptions-transport-ws": "^0.9.18",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "uuid": "^9.0.0",
+    "web-vitals": "^1.0.1",
+    "zustand": "^4.3.3"
   }
 }
